[package]
name = "luz"
version = "0.1.0"
edition = "2021"
publish = false
resolver = "2"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = { version = "0.4.2", features = ["derive"] }
rand = "0.8.5"
sha2 = "0.10.8"
thiserror = "1.0.63"
zeroize = { version = "1.8.1", features = ["derive"] }


[dev-dependencies]

[features]
